[metadata]
name = til-next-event
version = v0.0.0
description = Timer until next google calendar event

author = Colin Russell
author_email = c-russell@live.com

[options]
include_package_data = True
# install_requires =
    # lib==0.0.0
# packages = 
    # mod.mod
python_requires = ~= 3.7

# [options.entry_points]
# console_scripts =
#     a = mod.script:main